# Process this file with automake to produce Makefile.in

# Copyright (C) 2013 COR Entertainment, LLC.

botinfodir=$(pkgdatadir)/data1/botinfo

nobase_dist_botinfo_DATA = \
	^1Squirtney.cfg \
	^3Marty.cfg \
	^3Shploik!.cfg \
	^4Invad^6ur.cfg \
	^5Beavis.cfg \
	^7Ruh^4Lur.cfg \
	^7The^1Zapp.cfg \
	Astral.cfg \
	Beavis.cfg \
	Butthead.cfg \
	Cyborg.cfg \
	Destoroyah.cfg \
	Fafa.cfg \
	Gamara.cfg \
	Ghidora.cfg \
	Hedorah.cfg \
	Johnny.cfg \
	Mogera.cfg \
	Mothra.cfg \
	Squirtney.cfg \
	Stryker.cfg \
	Yoz.cfg \
	sample.cfg \
	allbots.tmp \
	team.tmp \
	dm-bloodfactory2k15.tmp \
	dm-dismal2k15.tmp \
	dm-extermination2k15.tmp \
	dm-neptune2k15.tmp \
	dm-turbo2k15.tmp \
	dm-violator2k15.tmp \
	dm-wasteland.tmp \
	tac-extermination2k15.tmp \
	tac-impact.tmp \
	nav/ctf-extermination2k15.nod \
	nav/dm-bloodfactory2k15.nod \
	nav/dm-dismal2k15.nod \
	nav/dm-extermination2k15.nod \
	nav/dm-neptune2k15.nod \
	nav/dm-turbo2k15.nod \
	nav/dm-violator2k15.nod \
	nav/dm-wasteland.nod \
	nav/tac-extermination2k15.nod
