# Process this file with automake to produce Makefile.in

# Copyright (C) 2013 COR Entertainment, LLC.

levelshotsdir=$(pkgdatadir)/data1/levelshots

nobase_dist_levelshots_DATA = \
	ctf-abyss.jpg \
	ctf-abyss.txt \
	ctf-extermination2k15.jpg \
	ctf-extermination2k15.txt \
	ctf-frost2k15.jpg \
	ctf-frost2k15.txt \
	ctf-violator2k16.jpg \
	ctf-violator2k16.txt \
	dm-bloodfactory2k15.jpg \
	dm-bloodfactory2k15.txt \
	dm-deathray2k16.jpg \
	dm-deathray2k16.txt \
	dm-dismal2k15.jpg \
	dm-dismal2k15.txt \
	dm-extermination2k15.jpg \
	dm-extermination2k15.txt \
	dm-neptune2k15.jpg \
	dm-neptune2k15.txt \
	dm-turbo2k15.jpg \
	dm-turbo2k15.txt \
	dm-violator2k15.jpg \
	dm-violator2k15.txt \
	dm-wasteland.jpg \
	dm-wasteland.txt \
	tac-extermination2k15.jpg \
	tac-extermination2k15.txt \
	tac-impact.jpg \
	tac-impact.txt
