# Process this file with automake to produce Makefile.in

# Copyright (C) 2013 COR Entertainment, LLC.

levelshotsdir=$(pkgdatadir)/data1/levelshots

nobase_dist_levelshots_DATA = \
	ctf-cryogenic2k16.jpg \
	ctf-cryogenic2k16.txt \
	ctf-cryogenic2k16_p.tga \
	ctf-extermination2k15.jpg \
	ctf-extermination2k15.txt \
	ctf-extermination2k15_p.tga \
	ctf-frost2k15.jpg \
	ctf-frost2k15.txt \
	ctf-frost2k15_p.tga \
	ctf-violator2k16.jpg \
	ctf-violator2k16.txt \
	ctf-violator2k16_p.tga \
	ctf-zion2k16.jpg \
	ctf-zion2k16.txt \
	ctf-zion2k16_p.tga \
	dm-babel2k16.jpg \
	dm-babel2k16.txt \
	dm-babel2k16_p.tga \
	dm-bloodfactory2k15.jpg \
	dm-bloodfactory2k15.txt \
	dm-bloodfactory2k15_p.tga \
	dm-crucible2k16.jpg \
	dm-crucible2k16.txt \
	dm-crucible2k16_p.tga \
	dm-deathray2k16.jpg \
	dm-deathray2k16.txt \
	dm-deathray2k16_p.tga \
	dm-dismal2k15.jpg \
	dm-dismal2k15.txt \
	dm-dismal2k15_p.tga \
	dm-dynamo2k16.jpg \
	dm-dynamo2k16.txt \
	dm-dynamo2k16_p.tga \
	dm-extermination2k15.jpg \
	dm-extermination2k15.txt \
	dm-extermination2k15_p.tga \
	dm-gauntlet2k16.jpg \
	dm-gauntlet2k16.txt \
	dm-gauntlet2k16_p.tga \
	dm-neptune2k15.jpg \
	dm-neptune2k15.txt \
	dm-neptune2k15_p.tga \
	dm-purgatory2k16.jpg \
	dm-purgatory2k16.txt \
	dm-purgatory2k16_p.tga \
	dm-turbo2k15.jpg \
	dm-turbo2k15.txt \
	dm-turbo2k15_p.tga \
	dm-violator2k15.jpg \
	dm-violator2k15.txt \
	dm-violator2k15_p.tga \
	dm-wasteland.jpg \
	dm-wasteland.txt \
	dm-wasteland_p.tga \
	tac-extermination2k15.jpg \
	tac-extermination2k15.txt \
	tac-extermination2k15_p.tga \
	tac-impact.jpg \
	tac-impact.txt \
	tac-impact_p.tga
