# Process this file with automake to produce Makefile.in

# Copyright (C) 2013 COR Entertainment, LLC.

mapsdir=$(pkgdatadir)/data1/maps

nobase_dist_maps_DATA = \
	aoa-atlantis.bsp \
	aoa-corrosion.bsp \
	aoa-frost2k9.bsp \
	aoa-morpheus.bsp \
	aoa-zorn.bsp \
	ctf-corrosion.bsp \
	ctf-corrosion.lightmap \
	ctf-cryogenic.bsp \
	ctf-extermination.bsp \
	ctf-extermination.lightmap \
	ctf-frostbyte.bsp \
	ctf-goregrinder.bsp \
	ctf-invasion.bsp \
	ctf-invasion.lightmap \
	ctf-oblivion.bsp \
	ctf-oblivion.lightmap \
	ctf-purgatory.bsp \
	ctf-titan2k8.bsp \
	ctf-vesuvius2k11.bsp \
	ctf-vesuvius2k11.lightmap \
	ctf-violator.bsp \
	ctf-zion2k9.bsp \
	dm-annihilation.bsp \
	dm-annihilation.lightmap \
	dm-atlantis2k8.bsp \
	dm-babel2k11.bsp \
	dm-bloodfactory2k12.bsp \
	dm-bloodfactory2k15.bsp \
	dm-chasmatic2k9.bsp \
	dm-command2k9.bsp \
	dm-corrosion.bsp \
	dm-corrosion.lightmap \
	dm-crucible2k12.bsp \
	dm-crucible2k12.lightmap \
	dm-deathray.bsp \
	dm-deimos2k9.bsp \
	dm-deimos2k9.lightmap \
	dm-dismal2k11.bsp \
	dm-dismal2k15.bsp \
	dm-downfall.bsp \
	dm-dynamo2k12.bsp \
	dm-dynamo2k12.lightmap \
	dm-eternal.bsp \
	dm-extermination.bsp \
	dm-extermination.lightmap \
	dm-extermination2k15.bsp \
	dm-extermination2k15.lightmap \
	dm-furious2k8.bsp \
	dm-furious2k8.lightmap \
	dm-goregrinder.bsp \
	dm-goregrinder.lightmap \
	dm-horus.bsp \
	dm-impact.bsp \
	dm-impact.lightmap \
	dm-invasion.bsp \
	dm-invasion.lightmap \
	dm-leviathan2k12.bsp \
	dm-liberation.bsp \
	dm-neptune.bsp \
	dm-neptune2k15.bsp \
	dm-neptune.lightmap \
	dm-oblivion.bsp \
	dm-oblivion.lightmap \
	dm-oblivion2k15.bsp \
	dm-omega2k8.bsp \
	dm-omega2k8.lightmap \
	dm-purgatory.bsp \
	dm-saucer2k9.bsp \
	dm-turbo2k15.bsp \
	dm-turbo2k8.bsp \
	dm-vesuvius2k11.bsp \
	dm-vesuvius2k11.lightmap \
	dm-violator2k11.bsp \
	dm-violator2k11.lightmap \
	dm-violator2k15.bsp \
	dm-violator2k15.lightmap \
	dm-warmachine2k10.bsp \
	dm-warmachine2k10.lightmap \
	dm-wasteland.bsp \
	dm-zorn2k11.bsp \
	dm-zion2k9.bsp \
	tac-extermination.bsp \
	tac-extermination.lightmap \
	tac-impact.bsp \
	tca-corrosion.bsp \
	tca-corrosion.lightmap \
	tca-cryogenic.bsp \
	tca-extermination.bsp \
	tca-invasion \
	tca-invasion.entdef \
	tca-purgatory.bsp \
	tca-titan2k8.bsp \
	tca-zion2k9.bsp \
	meshes/arch_fx.tga \
	meshes/arch.md2 \
	meshes/arch_normal.jpg \
	meshes/arch.tga \
	meshes/barrel.jpg \
	meshes/barrel.md2 \
	meshes/barrel_normal.jpg \
	meshes/bentconduit.md2 \
	meshes/bignode_fx.tga \
	meshes/bignode.jpg \
	meshes/bignode.md2 \
	meshes/bignode_normal.jpg \
	meshes/bigribpipe.jpg \
	meshes/bigribpipe.md2 \
	meshes/bigribpipe_normal.jpg \
	meshes/brainjarcover.md2 \
	meshes/brainjar.md2 \
	meshes/brainjar_normal.tga \
	meshes/brainjar.tga \
	meshes/cables2.md2 \
	meshes/cables3.md2 \
	meshes/cables4.md2 \
	meshes/cables.jpg \
	meshes/cables.md2 \
	meshes/cables_normal.jpg \
	meshes/cannister.jpg \
	meshes/cannister.md2 \
	meshes/cannister_normal.jpg \
	meshes/clamps.jpg \
	meshes/clamps.md2 \
	meshes/clamps_normal.jpg \
	meshes/cmdconsole_fx.tga \
	meshes/cmdconsole.jpg \
	meshes/cmdconsole.md2 \
	meshes/cmdconsole_normal.jpg \
	meshes/conduit.jpg \
	meshes/conduit_normal.jpg \
	meshes/controls_fx.tga \
	meshes/controls.md2 \
	meshes/controls_normal.tga \
	meshes/controls.tga \
	meshes/ctf-frost/canyon1.terrain \
	meshes/desert/barrel.jpg \
	meshes/desert/barrel.md2 \
	meshes/desert/barrel_normal.jpg \
	meshes/desert/book1.jpg \
	meshes/desert/book1.md2 \
	meshes/desert/book1_normal.jpg \
	meshes/desert/book2.jpg \
	meshes/desert/book2.md2 \
	meshes/desert/book2_normal.jpg \
	meshes/desert/book3.md2 \
	meshes/desert/books.jpg \
	meshes/desert/books_normal.jpg \
	meshes/desert/bookshelf.jpg \
	meshes/desert/bookshelf.md2 \
	meshes/desert/bookshelf_normal.jpg \
	meshes/desert/cactus1.jpg \
	meshes/desert/cactus1.md2 \
	meshes/desert/cactus1_normal.jpg \
	meshes/desert/cactus2.jpg \
	meshes/desert/cactus2.md2 \
	meshes/desert/cactus2_normal.jpg \
	meshes/desert/candle.jpg \
	meshes/desert/candle.md2 \
	meshes/desert/candle_fx.tga \
	meshes/desert/candle_normal.jpg \
	meshes/desert/chair.jpg \
	meshes/desert/chair.md2 \
	meshes/desert/chair_normal.jpg \
	meshes/desert/cliff1_normal.jpg \
	meshes/desert/cliff1.jpg \
	meshes/desert/cliff1.md2 \
	meshes/desert/damage1.decal \
	meshes/desert/damage2.decal \
	meshes/desert/damage3.decal \
	meshes/desert/lamp.jpg \
	meshes/desert/lamp.md2 \
	meshes/desert/lamp_fx.tga \
	meshes/desert/lamp_normal.jpg \
	meshes/desert/lantern.jpg \
	meshes/desert/lantern.md2 \
	meshes/desert/lantern_fx.tga \
	meshes/desert/lantern_normal.jpg \
	meshes/desert/metalbare_d.jpg \
	meshes/desert/platewall1.md2 \
	meshes/desert/platewall1.tga \
	meshes/desert/platewall1_normal.tga \
	meshes/desert/platewall2.md2 \
	meshes/desert/platewall2.tga \
	meshes/desert/platewall2_normal.tga \
	meshes/dm-bloodfactory/blood0.decal \
	meshes/dm-bloodfactory/blood1.decal \
	meshes/dm-bloodfactory/blood2.decal \
	meshes/dm-bloodfactory/blood3.decal \
	meshes/dm-bloodfactory/rubble1.terrain \
	meshes/dm-bloodfactory/rubble2.terrain \
	meshes/dm-dismal/rubble1.terrain \
	meshes/dm-dismal/snow1.terrain \
	meshes/dm-extermination/blood0.decal \
	meshes/dm-extermination/blood1.decal \
	meshes/dm-extermination/blood2.decal \
	meshes/dm-extermination/blood3.decal \
	meshes/dm-extermination/rubble1.terrain \
	meshes/dm-extermination/rubble2.terrain \
	meshes/dm-extermination/rubble3.terrain \
	meshes/dm-neptune/blood0.decal \
	meshes/dm-neptune/blood1.decal \
	meshes/dm-neptune/blood2.decal \
	meshes/dm-neptune/blood3.decal \
	meshes/dm-neptune/cave1.terrain \
	meshes/dm-neptune/cave2.terrain \
	meshes/dm-neptune/cave3.terrain \
	meshes/dm-neptune/cave4.terrain \
	meshes/dm-neptune/shark.iqm \
	meshes/dm-neptune/shark.jpg \
	meshes/dm-neptune/shark.skin \
	meshes/dm-neptune/shark_normal.jpg \
	meshes/dm-turbo/blood.decal \
	meshes/dm-turbo/blood2.decal \
	meshes/dm-turbo/rubble1.terrain \
	meshes/dm-wasteland/blood_splatter3.decal \
	meshes/dm-wasteland/canyon1.terrain \
	meshes/dm-wasteland/ivy1.decal \
	meshes/dm-wasteland/rocks1.decal \
	meshes/dome.md2 \
	meshes/dualpipes.jpg \
	meshes/dualpipes.md2 \
	meshes/dualpipes_normal.jpg \
	meshes/electrodecover.md2 \
	meshes/electrode.md2 \
	meshes/electrode.tga \
	meshes/electrode_normal.tga \
	meshes/eyejar_fx.tga \
	meshes/eyejarglass.md2 \
	meshes/eyejar.md2 \
	meshes/eyejar_normal.tga \
	meshes/eyejar.tga \
	meshes/flagpad_fx.tga \
	meshes/flagpad.md2 \
	meshes/flagpad_normal.tga \
	meshes/flagpad.tga \
	meshes/floorcables.md2 \
	meshes/generator.jpg \
	meshes/generator.md2 \
	meshes/generator_normal.jpg \
	meshes/gothic/blade.jpg \
	meshes/gothic/blade.md2 \
	meshes/gothic/blade_normal.jpg \
	meshes/gothic/blade2.md2 \
	meshes/gothic/ceillamp.md2 \
	meshes/gothic/column1.jpg \
	meshes/gothic/column1.md2 \
	meshes/gothic/column1_normal.jpg \
	meshes/gothic/dragon.jpg \
	meshes/gothic/dragon.md2 \
	meshes/gothic/dragon_normal.jpg \
	meshes/gothic/fdstatue_green.md2 \
	meshes/gothic/fd_statue_normal.jpg \
	meshes/gothic/fdstatue_red.md2 \
	meshes/gothic/freedom_statue_green.jpg \
	meshes/gothic/freedom_statue_red.jpg \
	meshes/gothic/lamp2b_fx.tga \
	meshes/gothic/lamp2b.md2 \
	meshes/gothic/lamp2b.tga \
	meshes/gothic/lamp2_fx.tga \
	meshes/gothic/lamp2.md2 \
	meshes/gothic/lamp2_normal.tga \
	meshes/gothic/lamp2.tga \
	meshes/gothic/lamp_fx.tga \
	meshes/gothic/lamp.md2 \
	meshes/gothic/lamp_normal.tga \
	meshes/gothic/lamp.tga \
	meshes/gothic/meat1.jpg \
	meshes/gothic/meat1.md2 \
	meshes/gothic/meat1_normal.jpg \
	meshes/gothic/meat2.jpg \
	meshes/gothic/meat2.md2 \
	meshes/gothic/meat2_normal.jpg \
	meshes/gothic/meat3.jpg \
	meshes/gothic/meat3.md2 \
	meshes/gothic/meat3_normal.jpg \
	meshes/gothic/neptune.jpg \
	meshes/gothic/neptune.md2 \
	meshes/gothic/neptune_normal.jpg \
	meshes/gothic/root.jpg \
	meshes/gothic/root.md2 \
	meshes/gothic/root_normal.jpg \
	meshes/gothic/skeleton1.md2 \
	meshes/gothic/skeleton2.md2 \
	meshes/gothic/skeleton3.md2 \
	meshes/gothic/skeleton.jpg \
	meshes/gothic/skeleton_normal.jpg \
	meshes/gothic/skull.jpg \
	meshes/gothic/skull1.md2 \
	meshes/gothic/skull2.md2 \
	meshes/gothic/skull_normal.jpg \
	meshes/gothic/throne.jpg \
	meshes/gothic/throne.md2 \
	meshes/gothic/throne_normal.jpg \
	meshes/gothic/tree1.jpg \
	meshes/gothic/tree1.md2 \
	meshes/gothic/tree1_normal.jpg \
	meshes/greenblob_fx.tga \
	meshes/greenblob.jpg \
	meshes/greenblob.md2 \
	meshes/hanger.md2 \
	meshes/hanger_normal.jpg \
	meshes/hanger.tga \
	meshes/hangingmartian.md2 \
	meshes/hangingmhelmet.md2 \
	meshes/hatch.jpg \
	meshes/hatch.md2 \
	meshes/hatch_normal.jpg \
	meshes/injector.jpg \
	meshes/injector.md2 \
	meshes/injector_normal.jpg \
	meshes/lamp2_fx.tga \
	meshes/lamp2.jpg \
	meshes/lamp2.md2 \
	meshes/lamp2_normal.jpg \
	meshes/martian.iqm \
	meshes/martian.jpg \
	meshes/martian.md2 \
	meshes/martian.skin \
	meshes/martian_normal.jpg \
	meshes/metpipe1.md2 \
	meshes/metpipe2.md2 \
	meshes/metpipe3.md2 \
	meshes/mhelmet.md2 \
	meshes/monitor2.md2 \
	meshes/monitor_normal.tga \
	meshes/monitor.jpg \
	meshes/monitor.md2 \
	meshes/mpa1.jpg \
	meshes/mpa1_normal.jpg \
	meshes/mpa2.jpg \
	meshes/mpa2_normal.jpg \
	meshes/pipes1.jpg \
	meshes/pipes1_normal.jpg \
	meshes/pipes.md2 \
	meshes/piston.md2 \
	meshes/piston_normal.jpg \
	meshes/piston.tga \
	meshes/pulsar.md2 \
	meshes/pulsar_normal.jpg \
	meshes/pulsar.tga \
	meshes/railcarglass.md2 \
	meshes/railcar.jpg \
	meshes/railcarmartian.md2 \
	meshes/railcar.md2 \
	meshes/railcarmhelmet.md2 \
	meshes/railcar_normal.jpg \
	meshes/redblob_fx.tga \
	meshes/redblob.jpg \
	meshes/redblob.md2 \
	meshes/redblob_normal.jpg \
	meshes/ribtube1.md2 \
	meshes/ribtube2.md2 \
	meshes/ribtube3.md2 \
	meshes/ribtube.jpg \
	meshes/ribtube_normal.jpg \
	meshes/rocks/02/diffuse.jpg \
	meshes/rocks/02/normal.jpg \
	meshes/rocks/02/rock.md2 \
	meshes/rocks/03/diffuse.jpg \
	meshes/rocks/03/normal.jpg \
	meshes/rocks/03/rock.md2 \
	meshes/rocks/04/diffuse.jpg \
	meshes/rocks/04/normal.jpg \
	meshes/rocks/04/rock.md2 \
	meshes/rocks/05/diffuse.jpg \
	meshes/rocks/05/normal.jpg \
	meshes/rocks/05/rock.md2 \
	meshes/rocks/rock1.jpg \
	meshes/rocks/rock1.md2 \
	meshes/rocks/rock2.jpg \
	meshes/rocks/rock2.md2 \
	meshes/rocks/rock3.jpg \
	meshes/rocks/rock3.md2 \
	meshes/rocks/rock4.jpg \
	meshes/rocks/rock4.md2 \
	meshes/rocks/rock5.md2 \
	meshes/sconduit1.md2 \
	meshes/sconduit2.md2 \
	meshes/scopecover.md2 \
	meshes/scope.md2 \
	meshes/scope_normal.tga \
	meshes/scope.tga \
	meshes/spingear_fx.tga \
	meshes/spingear.jpg \
	meshes/spingear.md2 \
	meshes/spingear_normal.jpg \
	meshes/spintube.jpg \
	meshes/spintube.md2 \
	meshes/spintube_normal.jpg \
	meshes/straightconduit.md2 \
	meshes/tech/bigribtube.jpg \
	meshes/tech/bigribtube_normal.jpg \
	meshes/tech/biotubebase.jpg \
	meshes/tech/biotubebase.md2 \
	meshes/tech/biotubebase_fx.tga \
	meshes/tech/biotubebase_normal.jpg \
	meshes/tech/blueribtube.jpg \
	meshes/tech/blueribtube1.md2 \
	meshes/tech/blueribtube_fx.tga \
	meshes/tech/glasstube.md2 \
	meshes/tech/obarch1.jpg \
	meshes/tech/obarch1.md2 \
	meshes/tech/obarch1_fx.tga \
	meshes/tech/obarch1_normal.jpg \
	meshes/tech/obarch2.md2 \
	meshes/tech/obarch3.md2 \
	meshes/tech/obfloor1.jpg \
	meshes/tech/obfloor1.md2 \
	meshes/tech/obfloor1_fx.tga \
	meshes/tech/obfloor1_normal.jpg \
	meshes/tech/obfloor2.md2 \
	meshes/tech/obfloor3.md2 \
	meshes/tech/obsupport1.jpg \
	meshes/tech/obsupport1.md2 \
	meshes/tech/obsupport1_fx.tga \
	meshes/tech/obsupport1_normal.jpg \
	meshes/tech/obsupport2.md2 \
	meshes/tech/obsupport3.md2 \
	meshes/tech/railing.jpg \
	meshes/tech/railing.md2 \
	meshes/tech/railing2.md2 \
	meshes/tech/railing3.md2 \
	meshes/tech/railing4.md2 \
	meshes/tech/railing5.md2 \
	meshes/tech/railing_normal.jpg \
	meshes/tech/redribtube.jpg \
	meshes/tech/redribtube1.md2 \
	meshes/tech/redribtube_fx.tga \
	meshes/tech/ribtubebig1.md2 \
	meshes/tech/ribtubebig10.md2 \
	meshes/tech/ribtubebig11.md2 \
	meshes/tech/ribtubebig12.md2 \
	meshes/tech/ribtubebig2.md2 \
	meshes/tech/ribtubebig3.md2 \
	meshes/tech/ribtubebig4.md2 \
	meshes/tech/ribtubebig5.md2 \
	meshes/tech/ribtubebig6.md2 \
	meshes/tech/ribtubebig7.md2 \
	meshes/tech/ribtubebig8.md2 \
	meshes/tech/ribtubebig9.md2 \
	meshes/tech/rotator.jpg \
	meshes/tech/rotator.md2 \
	meshes/tech/rotator_fx.tga \
	meshes/tech/rotator_normal.jpg \
	meshes/tech/rotatorglass.md2 \
	meshes/tech/rotatorimage1.md2 \
	meshes/tech/rotatorimage2.md2 \
	meshes/tech/rotatorimage3.md2 \
	meshes/tech/rotatorimage4.md2 \
	meshes/tech/rotimage1.tga \
	meshes/tech/rotimage1_normal.tga \
	meshes/tech/rotimage2.tga \
	meshes/tech/rotimage2_normal.tga \
	meshes/tech/rotimage3.tga \
	meshes/tech/rotimage3_normal.tga \
	meshes/tech/rotimage4.tga \
	meshes/tech/rotimage4_normal.tga \
	meshes/tech/slimegen.jpg \
	meshes/tech/slimegen.md2 \
	meshes/tech/slimegen2.md2 \
	meshes/tech/slimegen_fx.tga \
	meshes/tech/slimegen_normal.jpg \
	meshes/tech/slimegen_s.md2 \
	meshes/tech/slimegen_ss.md2 \
	meshes/tech/slimegenblue.jpg \
	meshes/tech/slimegenblue.md2 \
	meshes/tech/slimegenblue_fx.tga \
	meshes/tech/slimegenred.jpg \
	meshes/tech/slimegenred.md2 \
	meshes/tech/slimegenred_fx.tga \
	meshes/tech/slimetube1.md2 \
	meshes/tech/slimetube2.md2 \
	meshes/tech/turbinefan.jpg \
	meshes/tech/turbinefan.md2 \
	meshes/tech/turbinefan_normal.jpg \
	meshes/tech/turbinefan_vert.md2 \
	meshes/test/martian.jpg \
	meshes/test/martian_normal.tga \
	meshes/test/martian_fx.tga \
	meshes/toxicbarrell.jpg \
	meshes/toxicbarrell.md2 \
	meshes/toxicbarrell_normal.jpg \
	meshes/tubecover.md2 \
	meshes/tube.md2 \
	meshes/tube.tga \
	meshes/tundra/pinetree1.iqm \
	meshes/tundra/pinetree1.md2 \
	meshes/tundra/pinetree1.pcx \
	meshes/tundra/pinetree1.skin \
	meshes/tundra/pinetree1.tga \
	meshes/tundra/pinetree1_normal.jpg \
	meshes/tundra/pinetree2.iqm \
	meshes/tundra/pinetree2.md2 \
	meshes/tundra/pinetree2.skin \
	meshes/tundra/pinetree3.iqm \
	meshes/tundra/pinetree3.md2 \
	meshes/tundra/pinetree3.skin \
	meshes/unit.jpg \
	meshes/unit.md2 \
	meshes/unit_normal.jpg \
	meshes/urban/acetyline.jpg \
	meshes/urban/acetyline.md2 \
	meshes/urban/acetyline_normal.jpg \
	meshes/urban/barrier1.jpg \
	meshes/urban/barrier1.md2 \
	meshes/urban/barrier1_normal.jpg \
	meshes/urban/barrier2.jpg \
	meshes/urban/barrier2.md2 \
	meshes/urban/barrier2_normal.jpg \
	meshes/urban/bench.jpg \
	meshes/urban/bench.md2 \
	meshes/urban/bench_normal.jpg \
	meshes/urban/bluebulb.jpg \
	meshes/urban/bluebulb.md2 \
	meshes/urban/bluebulb_fx.tga \
	meshes/urban/bluelantern.jpg \
	meshes/urban/bluelantern.md2 \
	meshes/urban/bluelantern_fx.tga \
	meshes/urban/bulb.jpg \
	meshes/urban/bulb.md2 \
	meshes/urban/bulb_fx.tga \
	meshes/urban/bulb_normal.jpg \
	meshes/urban/deskstool.jpg \
	meshes/urban/deskstool_normal.jpg \
	meshes/urban/dumpster.jpg \
	meshes/urban/dumpster.md2 \
	meshes/urban/dumpster_normal.jpg \
	meshes/urban/filecab.jpg \
	meshes/urban/filecab.md2 \
	meshes/urban/filecab_normal.jpg \
	meshes/urban/lantern_normal.jpg \
	meshes/urban/mercedes.jpg \
	meshes/urban/mercedes.md2 \
	meshes/urban/orangelantern.jpg \
	meshes/urban/orangelantern.md2 \
	meshes/urban/orangelantern_fx.tga \
	meshes/urban/pallette.jpg \
	meshes/urban/pallette.md2 \
	meshes/urban/pallette_normal.jpg \
	meshes/urban/pallettecar.jpg \
	meshes/urban/pallettecar.md2 \
	meshes/urban/pallettecar_normal.jpg \
	meshes/urban/redbulb.jpg \
	meshes/urban/redbulb.md2 \
	meshes/urban/redbulb_fx.tga \
	meshes/urban/rio_normal.jpg \
	meshes/urban/rioblue.jpg \
	meshes/urban/rioblue.md2 \
	meshes/urban/rioblue_normal.jpg \
	meshes/urban/riored.jpg \
	meshes/urban/riored.md2 \
	meshes/urban/riosilver.jpg \
	meshes/urban/riosilver.md2 \
	meshes/urban/riosilver_normal.jpg \
	meshes/urban/roadbarrell.jpg \
	meshes/urban/roadbarrell.md2 \
	meshes/urban/roadbarrell_normal.jpg \
	meshes/urban/rope.jpg \
	meshes/urban/rope.md2 \
	meshes/urban/shelf.jpg \
	meshes/urban/shelf.md2 \
	meshes/urban/shelf_normal.jpg \
	meshes/urban/stool.md2 \
	meshes/urban/toolbox.jpg \
	meshes/urban/toolbox.md2 \
	meshes/urban/toolbox_normal.jpg \
	meshes/urban/yellowlantern.jpg \
	meshes/urban/yellowlantern.md2 \
	meshes/urban/yellowlantern_fx.tga \
	meshes/weaponpad_fx.tga \
	meshes/weaponpad.md2 \
	meshes/weaponpad_normal.tga \
	meshes/weaponpad.tga \
	meshes/xempx/ceillightbig.md2 \
	meshes/xempx/ceillight_fx.tga \
	meshes/xempx/ceillight.jpg \
	meshes/xempx/ceillight.md2 \
	meshes/xempx/ceillight_normal.jpg \
	meshes/xempx/crate32.md2 \
	meshes/xempx/crate64.md2 \
	meshes/xempx/crate96.md2 \
	meshes/xempx/crate.jpg \
	meshes/xempx/crate_normal.jpg \
	meshes/xempx/doorway1b.jpg \
	meshes/xempx/doorway1b.md2 \
	meshes/xempx/floorfan.jpg \
	meshes/xempx/floorfan.md2 \
	meshes/xempx/floorfan_normal.jpg \
	meshes/xempx/lightbomb45.md2 \
	meshes/xempx/lightbomb_fx.tga \
	meshes/xempx/lightbomb.jpg \
	meshes/xempx/lightbomb.md2 \
	meshes/xempx/lightbomb_normal.jpg \
	meshes/xempx/powercore_fx.tga \
	meshes/xempx/powercore.jpg \
	meshes/xempx/powercore.md2 \
	meshes/xempx/powercore_normal.jpg \
	meshes/xempx/powercorering.md2 \
	meshes/xempx/qtube2.md2 \
	meshes/xempx/qtube.jpg \
	meshes/xempx/qtube.md2 \
	meshes/xempx/qtube_normal.jpg \
	meshes/xempx/tripes1.jpg \
	meshes/xempx/tripes1.md2 \
	meshes/xempx/tripes1_normal.jpg \
	scripts/aoa-atlantis.mus \
	scripts/aoa-corrosion.fog \
	scripts/aoa-corrosion.mus \
	scripts/aoa-frost2k9.fog \
	scripts/aoa-frost2k9.mus \
	scripts/aoa-morpheus.mus \
	scripts/aoa-zorn.mus \
	scripts/ctf-corrosion.fog \
	scripts/ctf-corrosion.mus \
	scripts/ctf-cryogenic.fog \
	scripts/ctf-cryogenic.mus \
	scripts/ctf-europa2k8.mus \
	scripts/ctf-extermination.fog  \
	scripts/ctf-extermination.mus \
	scripts/ctf-frost2k15.fog \
	scripts/ctf-frost2k15.mus \
	scripts/ctf-frostbyte.fog \
	scripts/ctf-frostbyte.mus \
	scripts/ctf-goregrinder.fog \
	scripts/ctf-goregrinder.mus \
	scripts/ctf-invasion.fog \
	scripts/ctf-invasion.mus \
	scripts/ctf-oblivion.fog \
	scripts/ctf-oblivion.mus \
	scripts/ctf-purgatory.fog \
	scripts/ctf-purgatory.mus \
	scripts/ctf-titan2k8.mus \
	scripts/ctf-vesuvius2k11.fog \
	scripts/ctf-vesuvius2k11.mus \
	scripts/ctf-violator.fog \
	scripts/ctf-violator.mus \
	scripts/ctf-zion2k9.mus \
	scripts/dm-atlantis2k8.mus \
	scripts/dm-annihilation.fog \
	scripts/dm-annihilation.mus \
	scripts/dm-babel2k11.fog \
	scripts/dm-babel2k11.mus \
	scripts/dm-bloodfactory2k12.fog \
	scripts/dm-bloodfactory2k12.mus \
	scripts/dm-bloodfactory2k15.fog \
	scripts/dm-bloodfactory2k15.mus \
	scripts/dm-chasmatic2k9.fog \
	scripts/dm-chasmatic2k9.mus \
	scripts/dm-command2k9.fog \
	scripts/dm-command2k9.mus \
	scripts/dm-corrosion.fog \
	scripts/dm-corrosion.mus \
	scripts/dm-crucible2k12.fog \
	scripts/dm-crucible2k12.mus \
	scripts/dm-deathray.fog \
	scripts/dm-deathray.mus \
	scripts/dm-deimos2k9.mus \
	scripts/dm-dismal2k11.fog \
	scripts/dm-dismal2k11.mus \
	scripts/dm-dismal2k15.fog \
	scripts/dm-dismal2k15.mus \
	scripts/dm-downfall.fog \
	scripts/dm-downfall.mus \
	scripts/dm-dynamo2k12.fog \
	scripts/dm-dynamo2k12.mus \
	scripts/dm-eternal.fog \
	scripts/dm-eternal.mus \
	scripts/dm-extermination.fog \
	scripts/dm-extermination.mus \
	scripts/dm-extermination2k15.fog \
	scripts/dm-extermination2k15.mus \
	scripts/dm-furious2k8.fog \
	scripts/dm-furious2k8.mus \
	scripts/dm-goregrinder.fog \
	scripts/dm-goregrinder.mus \
	scripts/dm-horus.mus \
	scripts/dm-impact.fog \
	scripts/dm-impact.mus \
	scripts/dm-invasion.fog \
	scripts/dm-invasion.mus \
	scripts/dm-leviathan2k12.fog \
	scripts/dm-leviathan2k12.mus \
	scripts/dm-liberation.fog \
	scripts/dm-liberation.mus \
	scripts/dm-neptune.mus \
	scripts/dm-neptune2k15.fog \
	scripts/dm-neptune2k15.mus \
	scripts/dm-oblivion.fog \
	scripts/dm-oblivion.mus \
	scripts/dm-oblivion2k15.fog \
	scripts/dm-oblivion2k15.mus \
	scripts/dm-omega2k8.mus \
	scripts/dm-purgatory.fog \
	scripts/dm-purgatory.mus \
	scripts/dm-saucer2k9.fog \
	scripts/dm-saucer2k9.mus \
	scripts/dm-turbo2k15.fog \
	scripts/dm-turbo2k15.mus \
	scripts/dm-turbo2k8.fog \
	scripts/dm-turbo2k8.mus \
	scripts/dm-vesuvius2k11.fog \
	scripts/dm-vesuvius2k11.mus \
	scripts/dm-violator2k11.mus \
	scripts/dm-violator2k11.fog \
	scripts/dm-violator2k15.fog \
	scripts/dm-violator2k15.mus \
	scripts/dm-warmachine2k10.fog \
	scripts/dm-warmachine2k10.mus \
	scripts/dm-wasteland.fog \
	scripts/dm-wasteland.mus \
	scripts/dm-zorn2k11.fog \
	scripts/dm-zorn2k11.mus \
	scripts/dm-zion2k9.mus \
	scripts/tac-extermination.fog \
	scripts/tac-extermination.mus \
	scripts/tac-impact.fog \
	scripts/tac-impact.mus \
	scripts/tca-corrosion.fog \
	scripts/tca-corrosion.mus \
	scripts/tca-cryogenic.fog \
	scripts/tca-cryogenic.mus \
	scripts/tca-extermination.fog \
	scripts/tca-extermination.mus \
	scripts/tca-purgatory.fog \
	scripts/tca-purgatory.mus \
	scripts/tca-zion2k9.mus
